typescript/checker/tests/conformance/classes/members/inheritanceAndOverriding/derivedClassTransitivity4.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            346,
        ),
        hi: BytePos(
            347,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/classes/members/inheritanceAndOverriding/derivedClassTransitivity4.ts:15:5
   |
15 | var c: C;
   |     ^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            357,
        ),
        hi: BytePos(
            358,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/classes/members/inheritanceAndOverriding/derivedClassTransitivity4.ts:16:5
   |
16 | var d: D;
   |     ^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            368,
        ),
        hi: BytePos(
            369,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/classes/members/inheritanceAndOverriding/derivedClassTransitivity4.ts:17:5
   |
17 | var e: E;
   |     ^

error: unimplemented
expand_export_info(E)
File: $DIR/tests/conformance/classes/members/inheritanceAndOverriding/derivedClassTransitivity4.ts
  --> $DIR/tests/conformance/classes/members/inheritanceAndOverriding/derivedClassTransitivity4.ts:18:1
   |
18 | c = e;
   | ^^^^^

error: NoCallSignature {
    span: Span {
        lo: BytePos(
            392,
        ),
        hi: BytePos(
            396,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/classes/members/inheritanceAndOverriding/derivedClassTransitivity4.ts:19:10
   |
19 | var r = c.foo(1);
   |          ^^^^

error: NoCallSignature {
    span: Span {
        lo: BytePos(
            412,
        ),
        hi: BytePos(
            416,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/classes/members/inheritanceAndOverriding/derivedClassTransitivity4.ts:20:11
   |
20 | var r2 = e.foo('');
   |           ^^^^

